--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
-spacy>=3.0.0
-benepar>=0.2.0
-streamlit>=1.12.0
-torch>=2.0.0
-transformers>=4.30.0
-tokenizers>=0.13.0
-numpy>=1.22.0
-matplotlib>=3.5.0
-graphviz>=0.16
-seaborn>=0.12.0
-plotly>=5.8.0
-scikit-learn>=1.0.0 
+spacy==3.7.2
+https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+benepar==0.2.0
+streamlit==1.29.0
+torch==2.0.1
+transformers==4.35.2
+tokenizers==0.15.0
+numpy==1.24.3
+matplotlib==3.7.2
+graphviz==0.20.1
+python-graphviz==0.20.1
+plotly==5.18.0
+scikit-learn==1.3.2
+seaborn==0.13.0
+protobuf==4.23.4 
