--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,13 @@
+numpy>=1.24.3
+matplotlib>=3.7.2
 spacy==3.7.2
 benepar==0.2.0
 streamlit==1.29.0
 torch==2.2.0
-transformers==4.35.2
-tokenizers==0.15.0
-numpy==1.24.3
-matplotlib==3.7.2
+transformers==4.30.2
+tokenizers==0.13.3
 graphviz==0.20.1
-python-graphviz==0.20.1
-plotly==5.18.0
-scikit-learn==1.3.2
-seaborn==0.13.0
-protobuf==4.23.4 
+plotly==5.15.0
+scikit-learn==1.3.0
+seaborn==0.12.2
+protobuf==4.24.4 
