--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 numpy>=1.24.3
 matplotlib>=3.7.2
-spacy>=3.7.0
+spacy==3.7.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
 streamlit>=1.29.0
 torch>=2.0.0
 transformers>=4.30.0
@@ -8,4 +9,5 @@ graphviz>=0.20.1
 plotly>=5.15.0
 seaborn>=0.12.2
 protobuf>=4.24.0
-scikit-learn>=1.0.2 
+scikit-learn>=1.0.2
+benepar>=0.2.0 
