--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-numpy==1.24.3
+numpy>=1.26.0
 matplotlib>=3.7.2
 spacy==3.7.0
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
@@ -9,5 +9,5 @@ graphviz>=0.20.1
 plotly>=5.15.0
 seaborn>=0.12.2
 protobuf>=4.24.0
-scikit-learn==1.2.2
+scikit-learn>=1.3.0
 benepar>=0.2.0 
