--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-numpy>=1.26.0
-matplotlib>=3.7.2
-spacy==3.7.0
+numpy==1.26.3
+matplotlib==3.8.2
+spacy==3.7.2
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0-py3-none-any.whl
 streamlit>=1.29.0
 torch>=2.0.0
@@ -9,5 +9,5 @@ graphviz>=0.20.1
 plotly>=5.15.0
 seaborn>=0.12.2
 protobuf>=4.24.0
-scikit-learn>=1.3.0
+scikit-learn==1.3.2
 benepar>=0.2.0 
